# ga4-tracking-plan

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: official-docs-drift.yml  release-package.yml  validate-skill.yml
files/: daxon_homepage_ga4_tracking_plan.xlsx  ga4_event_scenario_library.xlsx  ga4_tracking_plan_template_v2_1.xlsx  lolivier_homepage_ga4_tracking_plan.xlsx
maintenance/evaluations/: fresh-agent-evaluation-cases.json
maintenance/references/: corpus-review-workflow.md  fresh-agent-evaluation.md  official-catalog-maintenance.md  review-corpus-learning-policy.md
maintenance/scripts/: migrate_tracking_plan.py
scripts/: analyze_tracking_plan_corpus.ps1  check_installed_skill_sync.py  create_default_template.py  create_event_scenario_library.py  create_release_package.py  create_tracking_plan_template.py  discover_site_journeys.py  generate_tracking_plan_workbook.py  migrate_tracking_plan.py  validate_eval_manifest.py  validate_fresh_agent_evals.py  validate_package.py
skill/: SKILL.md  release.json
skill/agents/: openai.yaml
skill/assets/: default-tracking-plan.xlsx  ga4_tracking_plan_template.xlsx
skill/references/: business_scenario_analysis.md  corpus_learning_policy.md  custom_event_decision_matrix.md  data_quality_privacy.md  example-tracking-plan.json  example_comparison_contract.md  ga4_event_scenario_library.md  generic_piano_ecommerce_tracking_plan_fixture.json  generic_piano_tracking_plan_fixture.json  generic_tracking_plan_fixture.json  official-first.md  product.md  (+19 more)
tests/: test_browser_environment.py  test_contract_migration.py  test_delivery_rules.py  test_discover_site_journeys.py  test_ecommerce_matrix.py  test_fresh_agent_evals.py  test_governance_rules.py  test_official_catalog.py  test_official_source_receipt.py  test_plan_initializer.py  test_root_wrappers.py  test_scenario_library.py  test_screenshot_evidence.py  test_template_tools.py  test_tracking_plan_diff.py  test_tracking_plan_validation.py  test_tracking_plan_validation_branches.py  test_workbook_contract.py
(+87 files in other folders)
