[project]
name = "ga4-tracking-plan-skill"
version = "2.0.0"
description = "Utility-first GA4 web analyst skill for human-readable, implementation-ready tracking plans"
requires-python = ">=3.11"
dependencies = [
  "jsonschema>=4.22,<5",
  "openpyxl>=3.1,<4",
  "pillow>=12.3,<13",
  "playwright>=1.52,<2",
  "greenlet>=3.1.1,<3.2",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.9,<8",
  "pip-audit>=2.9,<3",
  "radon>=6,<7",
  "ruff>=0.12,<1",
  "vulture>=2.14,<3",
]

[tool.ruff]
target-version = "py311"
line-length = 160
extend-exclude = [
  "deliverables",
  "generated",
  "release",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"skill/tests/*.py" = ["E402"]
